file-interpolator/test-import-interpolate.out
file:///Users/gvwilson/stjs/file-interpolator/test-import-interpolate.js:3
import imported from './import-interpolate.js'
       ^^^^^^^^
SyntaxError: The requested module './import-interpolate.js' does not provide an export named 'default'
    at ModuleJob._instantiate (internal/modules/esm/module_job.js:98:21)
    at async ModuleJob.run (internal/modules/esm/module_job.js:143:5)
    at async Loader.import (internal/modules/esm/loader.js:165:24)
    at async Object.loadESM (internal/process/esm_loader.js:68:5)
